fix(documentation): change dark mode primary color

--- a/user-docs/documentation/src/css/custom.css
+++ b/user-docs/documentation/src/css/custom.css
@@ -21,13 +21,13 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: hsl(54, 100%, 60%);
-  --ifm-color-primary-dark: hsl(54, 100%, 66%);
-  --ifm-color-primary-darker: hsl(54, 100%, 53%);
-  --ifm-color-primary-darkest: hsl(54, 100%, 47%);
-  --ifm-color-primary-light: hsl(54, 100%, 65%);
-  --ifm-color-primary-lighter: hsl(54, 100%, 67%);
-  --ifm-color-primary-lightest: hsl(54, 100%, 74%);
+  --ifm-color-primary: hsl(47, 99%, 55%);
+  --ifm-color-primary-dark: hsl(47, 99%, 61%);
+  --ifm-color-primary-darker: hsl(47, 99%, 48%);
+  --ifm-color-primary-darkest: hsl(47, 99%, 42%);
+  --ifm-color-primary-light: hsl(47, 99%, 60%);
+  --ifm-color-primary-lighter: hsl(47, 99%, 62%);
+  --ifm-color-primary-lightest: hsl(47, 99%, 69%);
 }
 
 .docusaurus-highlight-code-line {
